@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-28T08:28:25Z",
-  "count_outdated" : 142,
-  "uniques_outdated" : 98,
+  "timestamp" : "2022-09-29T08:27:46Z",
+  "count_outdated" : 143,
+  "uniques_outdated" : 99,
   "count" : 149,
   "uniques" : 105,
   "clones" : [
-    {
-      "timestamp": "2022-09-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-18T00:00:00Z",
       "count": 1,
