@@ -1,3 +1,11 @@
+2022-09-29T08:27:46Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3149768502
+* notice: last 14d: unq all: 1 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 98 142 / 105 149
+* notice: next accum: outdated-unq outdated-all / unq all: 99 143 / 105 149
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-15] / []
+
 2022-09-28T08:28:25Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3141979154
 * notice: last 14d: unq all: 1 7
